<resources>
    <string name="app_name">Galeri Hewan</string>
    <string name="lanjut">lanjut</string>
    <string name="kembali">kembali</string>
    <string name="kambing">Kambing</string>
    <string name="nama"><b>Nama:</b> Muhammad Naufal Hanif</string>
    <string name="email"><b>Email:</b> naufalmng@gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="nama_hewan_arg"><b>Nama Hewan:</b> %1$s</string>
    <string name="nama_latin_arg"><b>Nama Latin:</b> %1$s</string>
    <string name="jenis_hewan_arg"><b>Jenis Hewan:</b> %1$s</string>
    <string name="action_switch_layout">Action Switch Layout</string>
</resources>